--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "angular-embed-video": "0.0.4",
+    "angular-responsive-carousel": "^2.1.2",
     "lottie-web": "^5.8.1",
     "mat-video": "^2.8.1",
     "ngx-lottie": "^8.0.1",
