--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lottie-web": "^5.8.1",
     "mat-video": "^2.8.1",
     "ngx-lottie": "^8.0.1",
+    "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.4.0",
+    "swiper": "^6.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +36,7 @@
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/swiper": "^6.0.0",
     "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
